# xunfeiad-rust-svelte-admin-backend

./: .env  Cargo.toml  README.md  a.js
api/: Cargo.toml  cert.pem  key.pem  nopass.pem
api/examples/: either.rs  extractors.rs  parse_url.rs  response.rs  state.rs
api/src/: lib.rs  route.rs  utils.rs
api/src/auth/: access.rs  domain.rs  mod.rs  role.rs  user.rs  user_role.rs
api/src/email/: email.rs  mod.rs
api/templates/: email.html  email.html.tera
entity/: Cargo.toml
entity/examples/: validate.rs
entity/src/: access.rs  domain.rs  group.rs  message.rs  mod.rs  prelude.rs  role.rs  role_access.rs  role_domain.rs  task.rs  user.rs  user_group.rs  user_role.rs
macro-trait/: Cargo.toml
macro-trait/src/: lib.rs
main/: Cargo.toml
main/src/: main.rs  middleware.rs  websocket.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240310_171244_user.rs  m20240310_174955_role.rs  m20240310_175000_access.rs  m20240310_175005_domain.rs  m20240310_180627_user_role.rs  m20240310_182026_role_access.rs  m20240310_182114_role_domain.rs  m20240310_184559_message.rs  m20240310_184603_group.rs  m20240310_184642_user_group.rs  m20240310_184750_task.rs  main.rs
pkg/: Cargo.toml
pkg/src/: crypt.rs  lib.rs
service/: Cargo.toml
service/examples/: base.rs  db.rs  model.rs  sha2.rs  sql_parse.rs
service/src/: db.rs  lib.rs
service/src/auth/: access.rs  domain.rs  mod.rs  role.rs  user.rs  user_role.rs
service/src/task/: email.rs
sql-query/: Cargo.toml
sql-query/src/: query.rs
