[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["openssl"] }
env_logger = "0.10.1"
tokio = { workspace = true }
anyhow = { workspace = true }
openssl = "0.10.60"
serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3.29"
entity = { path = "../entity" }
service = { path = "../service" }
http = "0.2.12"
derive_more = "0.99.17"
sea-orm.workspace = true
pkg = { path = "../pkg" }
validator = { version = "0.17.0", features = ["derive"] }
tera = "1.19.1"
log = "0.4.21"

