[package]
name = "entity"
version = "0.1.0"
edition = "2021"

[lib]
name = "entity"
path = "src/mod.rs"


[dependencies]
tokio.workspace = true
sea-orm.workspace = true
anyhow.workspace = true
#serde.workspace = true
dotenvy.workspace = true
actix-web = "4.4.0"
serde_json = "1.0.108"
chrono = "0.4.31"
pkg = { path = "../pkg" }
async-trait = "0.1.74"
serde = { version = "1.0.193", features = ["derive"] }
validator = { version = "0.17.0", features = ["derive"] }
macro-trait = { path = "../macro-trait" }
