[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
env_logger = "0.10.1"
log = "0.4.20"
api = { path = "../api" }
actix-web = "4.4.0"
dotenvy = "0.15.7"
pkg = { path = "../pkg" }
service = { path = "../service" }
futures-util = "0.3.30"
entity = { path = "../entity" }
sea-orm = { version = "0.12.7", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
actix-cors = "0.6.4"
http = "1.1.0"

