[package]
name = "pkg"
version = "0.1.0"
edition = "2021"

[lib]
#proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "2.0.39"
quote = "1.0.33"
sea-orm = { version = "0.12.7", features = ["macros"] }
chrono = "0.4.31"
http = "1.0.0"
actix-web = "4.4.0"
derive_more = "0.99.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
validator = { version = "0.16.1", features = ["derive"] }
hex-literal = "0.4.1"
sha2 = "0.10.8"
base64 = "0.22.0"
hmac = "0.12.1"
jwt = "0.16.0"
anyhow = "1.0.75"
